fix[manager.css]: remove display:none
[fixed: cannot showing search result]

--- a/src/main/resources/static/css/manager/manager.css
+++ b/src/main/resources/static/css/manager/manager.css
@@ -418,7 +418,6 @@ a:hover {
 
 .searchResultSection {
     margin: 20px 0 30px;
-    display: none;  /* 초기에는 숨김 상태 */
 }
 
 .resultCount {
